# research-clerk

./: .gitignore  CHANGES.md  README.md  SETUP.md  cleanup_duplicates.py  cli.py  pyproject.toml
research_clerk/: __init__.py  apply_reorganization.py  apply_suggestions.py  categorizer.py  cli.py  config.py  prompts.py  reorganizer.py  tools.py  utils.py
research_clerk/backends/: __init__.py  local_sqlite.py
scripts/: watch-zotero.sh
